--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ username= "postgres"
 host= "localhost"
 password= "root"
 database= "translateApp"
-JWT_SECRET_KEY = "abcjwdfj686jwhw@hkvqkjehf"
+JWT_SECRET_KEY = "kem-cho-majama?"
